--- a/css/styleforindex.css
+++ b/css/styleforindex.css
@@ -656,7 +656,8 @@ nav {
   position:fixed; inset:0;
   display:none; align-items:center; justify-content:center;
   background:rgba(0,0,0,.6);
-  padding:24px; z-index:99999;
+  padding:24px; 
+  z-index:1000000;
   
 }
 .modal-overlay.active{ display:flex; }
