--- a/css/style1.css
+++ b/css/style1.css
@@ -1138,3 +1138,26 @@ nav {
     background: #FFF19B;
     border-radius: 3px;
 }
+
+.weapon-media {
+  position: relative;
+  width: 100%;
+  height: auto;
+}
+
+.weapon-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.4s ease;
+  border-radius: 8px; /* если у картинок скругление */
+}
+
+.weapon-media:hover .weapon-video {
+  opacity: 1;
+}
